--- a/Memorizer/app/src/main/res/layout/statistics_layout.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_layout.xml
@@ -1,143 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/stasticsRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_stat"
-    android:fillViewport="true">
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/gameName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/staatliches"
+        android:letterSpacing="-0.03"
+        android:text="STATISTICS"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="54sp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/radiogroupLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gameName"
+        android:layout_centerHorizontal="true"
+        android:layout_weight="0">
+
+        <Button
+            android:id="@+id/sequencegamebutton"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/staatliches"
+            android:shadowColor="@color/black"
+            android:text="Sequence Memory"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/numbergamebutton"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/numbergamebutton"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/staatliches"
+            android:shadowColor="@color/black"
+            android:text="Number Memory"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/visualgamebutton"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/sequencegamebutton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/visualgamebutton"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/staatliches"
+            android:shadowColor="@color/black"
+            android:text="Visual Memory"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/numbergamebutton"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/insidescrollview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@+id/radiogroupLayout"
+        android:layout_weight="10">
+
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:stretchColumns="1">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:padding="4dip"
+                    android:text="Date and time"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:gravity="right"
+                    android:padding="4dip"
+                    android:text="Score"
+                    android:textColor="#000000" />
+            </TableRow>
+
+            <View
+                android:layout_height="2dip"
+                android:background="#FF909090" />
+        </TableLayout>
+    </ScrollView>
 
     <RelativeLayout
-        android:id="@+id/stasticsRelativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_below="@+id/insidescrollview"
+        android:layout_weight="3">
 
-        <TextView
-            android:id="@+id/gameName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:fontFamily="@font/staatliches"
-            android:letterSpacing="-0.03"
-            android:text="STATISTICS"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="54sp" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/relLayoutButtons"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/gameName"
-            android:layout_centerHorizontal="true">
-
-            <Button
-                android:id="@+id/sequencegamebutton"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:background="@drawable/rounded_button"
-                android:fontFamily="@font/staatliches"
-                android:shadowColor="@color/black"
-                android:text="Sequence Memory"
-                android:textAllCaps="false"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@+id/numbergamebutton"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/numbergamebutton"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:background="@drawable/rounded_button"
-                android:fontFamily="@font/staatliches"
-                android:shadowColor="@color/black"
-                android:text="Number Memory"
-                android:textAllCaps="false"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@+id/visualgamebutton"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/sequencegamebutton"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/visualgamebutton"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:background="@drawable/rounded_button"
-                android:fontFamily="@font/staatliches"
-                android:shadowColor="@color/black"
-                android:text="Visual Memory"
-                android:textAllCaps="false"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/numbergamebutton"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ScrollView
-            android:id="@+id/insidescrollview"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_below="@+id/relLayoutButtons">
-
-            <TableLayout
-                android:id="@+id/tableLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:stretchColumns="1">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:padding="4dip"
-                        android:text="Date and time"
-                        android:textColor="#000000" />
-
-                    <TextView
-                        android:gravity="right"
-                        android:padding="4dip"
-                        android:text="Score"
-                        android:textColor="#000000" />
-                </TableRow>
-
-                <View
-                    android:layout_height="2dip"
-                    android:background="#FF909090" />
-            </TableLayout>
-        </ScrollView>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/insidescrollview">
-
-            <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/personalbest_icon"
-                app:srcCompat="@drawable/personalbest_icon"
-                android:scaleType="fitCenter"
-                />
-        </RelativeLayout>
-
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/personalbest_icon"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/personalbest_icon" />
     </RelativeLayout>
 
-</ScrollView>
+</LinearLayout>
 
 
+    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@drawable/gradient_stat"-->
+    <!--android:fillViewport="true">-->
