--- a/Memorizer/app/src/main/res/layout/verbal_layout.xml
+++ b/Memorizer/app/src/main/res/layout/verbal_layout.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/tvVerbalLives"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="@string/lives_not_found"
                 android:textSize="28sp" />
         </LinearLayout>
@@ -34,6 +35,7 @@
                 android:id="@+id/tvVerbalScore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="@string/score_not_found"
                 android:textSize="28sp" />
         </LinearLayout>
@@ -52,10 +54,10 @@
             <TextView
                 android:id="@+id/tvWord"
                 android:layout_width="wrap_content"
-
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:text="@string/word_not_found"
-                android:textSize="28sp" />
+                android:textSize="36dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -77,19 +79,21 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="25dp"
                 android:background="@color/white"
                 android:onClick="seenOnClick"
                 android:text="SEEN"
+                android:textSize="20sp"
                 android:textColor="@color/black" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="25dp"
                 android:background="@color/white"
                 android:onClick="newOnClick"
                 android:text="NEW"
+                android:textSize="20sp"
                 android:textColor="@color/black" />
         </LinearLayout>
 
